# studio-new

./: .gitignore  .mise.toml  CLAUDE.md  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ansible/playbooks/: bootstrap.yml  init-server.yml  mount.yml  security.yml  setup-docker.yml
ansible/tasks/: install-docker-roolout.yml  verify-services.yml  wait-for-connection.yml
docker/nodejs/: Dockerfile
infra-apps/backup/: .env.example
infra-apps/caddy/: Caddyfile  docker-compose.yml
infra-apps/db-admin/: .env.example  .gitignore  README.md  docker-compose.yml
infra-apps/db-admin/migrations/: 001-create-demo-db.sh
infra-apps/db-admin/scripts/: common.sh  run-migrations.sh
infra-apps/postgres/: .env.example  README.md  build.sh  docker-compose.yml  mise.toml  postgresql.conf
infra-apps/redis/: .env.example  .gitignore  README.md  backup.sh  docker-compose.yml  redis.conf  upgrade.sh
js-apps/api/: package.json
js-apps/blog/: package.json
js-apps/hono-demo/: .env.example  .node-pg-migrate.config.js  MIGRATION_UPGRADE.md  README-MIGRATIONS.md  README-POSTS.md  README.md  dev-with-env.js  package.json  test-db.ts  tsconfig.json  vite.config.ts
js-apps/hono-demo/src/: index.tsx
js-apps/proxy/: README.md  index.mjs  package.json
js-apps/storefront/: package.json
js-packages/config-eslint/: package.json
rust-packages/psenv/: Cargo.toml  LICENSE  README.md  prompt.md
rust-packages/psenv/src/: aws_client.rs  env_handler.rs  lib.rs  main.rs  secret_masker.rs  template_parser.rs  test_demo.rs
scripts/: create-init-user.sh
(+18 files in other folders)
